# incineroar

./: .gitignore  README.md  eslint.config.mjs  example.env  instrumentation.ts  next-logger.config.js  next.config.ts  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml  e2e.yml  production-seed.yml
app/: actions.ts  layout.tsx  page.tsx
app/(home)/: layout.tsx
app/__snapshots__/: page.test.tsx.snap
app/auth/: page.tsx
app/dev/: actions.ts  page.tsx
app/home/: error.tsx  layout.tsx
data/: users.json
docs/specs/: gamplay-parsing.md
e2e/: .gitignore  README.md  pyproject.toml
e2e/data/: sample-battle-log.txt
e2e/src/models/: team.py  tournament.py  training.py  user.py
e2e/src/pages/: home.py  landing.py  login.py  metagame.py  teams.py  training.py
e2e/src/util/: api.py  constants.py  data.py  names.py  prefix.py  user_pool.py
e2e/tests/: conftest.py  test_home.py  test_landing.py  test_login.py  test_metagame.py  test_sample.py  test_teams.py  test_training.py
scripts/: gen-antd-mocks.ts  get-tournaments.ts  seed.ts
src/actions/: error-handlers.ts  scrap.ts  team.test.ts  team.ts  tournament.ts
src/components/: BreadcrumbItems.tsx  ItemSprite.tsx  MarkdownText.tsx  PokemonSet.tsx  PokemonSprite.tsx  PokemonUsageCard.tsx  Redirect.tsx  TeamPreview.tsx  TypeBadge.tsx  Welcome.tsx
src/constants/: query-keys.ts  training-limits.ts
src/db/: DBConnection.ts  repository.ts
src/hooks/: pokemon-queries.ts  team-queries.ts  tournament-queries.ts  training-queries.ts  useAllPokemonQuery.ts  useBreadcrumbs.tsx  useTitle.ts  (+7 more)
(+83 files in other folders)
